# dcerpc-rust

./: ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md
.claude/: settings.local.json
crates/dcerpc/: Cargo.toml
crates/dcerpc/src/: dcerpc.rs  dcerpc_auth_client.rs  dcerpc_auth_server.rs  dcerpc_cl.rs  dcerpc_client.rs  dcerpc_epm.rs  dcerpc_epm_client.rs  dcerpc_epm_server.rs  dcerpc_pipe.rs  dcerpc_server.rs  dcerpc_transport.rs  dcerpc_udp_client.rs  dcerpc_udp_server.rs  error.rs  fragmentation.rs  lib.rs  named_pipe_transport.rs  security.rs  sspi.rs  udp_transport.rs
crates/dcom/: Cargo.toml
crates/dcom/src/: client.rs  lib.rs  server.rs
crates/dcom/src/activation/: client.rs  mod.rs  protocol.rs  server.rs
crates/dcom/src/apartment/: apartment.rs  dispatcher.rs  mod.rs  mta.rs  sta.rs
crates/dcom/src/exporter/: garbage_collection.rs  mod.rs  object_exporter.rs  reference_counting.rs  tables.rs
crates/dcom/src/oxid_resolver/: client.rs  mod.rs  protocol.rs  server.rs
crates/dcom/src/remunknown/: client.rs  mod.rs  protocol.rs  server.rs
crates/dcom/src/types/: error.rs  identifiers.rs  mod.rs  objref.rs  orpc.rs  stdobjref.rs  stringbinding.rs
crates/midl/: Cargo.toml
crates/midl-ndr/: Cargo.toml
crates/midl-ndr/src/: arrays.rs  context.rs  decode.rs  encode.rs  error.rs  lib.rs  pointers.rs  primitives.rs  strings.rs
crates/midl/src/: ast.rs  error.rs  lexer.rs  lib.rs  ndr_layout.rs  parser.rs  semantic.rs
crates/midl/src/codegen/: client.rs  mod.rs  ndr.rs  server.rs  types.rs
docs/: LONG_RUNNING_STRESS_TESTS.md  SECURITY_REVIEW_SUMMARY.md
examples/dcerpc-echo-service/: Cargo.toml
examples/dcerpc-echo-service/src/: main.rs
examples/dcom-hello/: Cargo.toml  hello.idl
examples/dcom-hello/src/: client.rs  hello_rpc.rs  lib.rs  server.rs
examples/dcom-service/: Cargo.toml
examples/dcom-service/src/: client.rs  common.rs  server.rs
examples/msrpc-calculator/: Cargo.toml  calculator.idl
examples/msrpc-calculator/src/: calculator_rpc.rs  client.rs  lib.rs  server.rs
examples/print-service/: Cargo.toml
examples/print-service/src/: client.rs  common.rs  server.rs
tests/integration/: Cargo.toml  README.md
tests/integration/src/: apartment_tests.rs  circular_call_tests.rs  common.rs  complex_types_tests.rs  fragmentation_tests.rs  longrunning_stress_tests.rs  main.rs  multi_hop_tests.rs  pipe_tests.rs  security_tests.rs  stress_tests.rs
tools/midlc/: Cargo.toml
tools/midlc/src/: main.rs
