[workspace]
resolver = "2"
members = [
    "crates/dcerpc",
    "crates/dcom",
    "crates/midl-ndr",
    "crates/midl",
    "tools/midlc",
    "examples/dcerpc-echo-service",
    "examples/print-service",
    "examples/dcom-service",
    "examples/msrpc-calculator",
    "examples/dcom-hello",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DCE RPC Rust Implementation"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
winnow = "0.6"
quote = "1.0"
proc-macro2 = "1.0"
async-trait = "0.1"
rand = "0.8"
parking_lot = "0.12"
