[package]
name = "dcom"
description = "DCOM (Distributed Component Object Model) implementation on top of DCE RPC"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dcerpc = { path = "../dcerpc" }
tokio.workspace = true
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio-test = "0.4"
