[package]
name = "midl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MIDL (Microsoft Interface Definition Language) compiler library"

[dependencies]
midl-ndr = { path = "../midl-ndr" }
winnow = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
syn = { version = "2.0", features = ["full", "parsing"] }
prettyplease = "0.2"

[dev-dependencies]
